--- a/Frontend/src/app/app-shop/view/business-account/business-account.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/business-account.component.html
@@ -167,5 +167,5 @@
   </div>
 </div>
 
-<app-item-detail-view></app-item-detail-view>
+<!--<app-item-detail-view></app-item-detail-view>-->
 <app-item-package-detail-view></app-item-package-detail-view>
