--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
@@ -125,9 +125,14 @@
                        [ngStyle]="{'margin-top':itemFirst?'30px':'0px'}">
                     <div class="d-flex align-items-center justify-content-between pb-1">
                       <h3 class="h6 fs-base" style="margin-bottom: 0px;display: flex">
+                        <!--<a class="nav-link" data-bs-toggle="offcanvas"-->
+                           <!--(click)="orderDetail.orderDetailType==='Item'?getItemSelected(orderDetail.item):orderDetail.orderDetailType==='ItemPackage'?getPackageItemSelected(orderDetail.itemPackage):''"-->
+                           <!--[attr.data-bs-target]="orderDetail.orderDetailType==='Item'?'#item-viewer-g':orderDetail.orderDetailType==='ItemPackage'?'#item-package-viewer-g':''">-->
+                          <!--{{orderDetail.orderDetailType==='Item'?orderDetail.item.name:orderDetail.orderDetailType==='ItemPackage'?orderDetail.itemPackage.name:''}}-->
+                        <!--</a>-->
                         <a class="nav-link" data-bs-toggle="offcanvas"
-                           (click)="orderDetail.orderDetailType==='Item'?getItemSelected(orderDetail.item):orderDetail.orderDetailType==='ItemPackage'?getPackageItemSelected(orderDetail.itemPackage):''"
-                           [attr.data-bs-target]="orderDetail.orderDetailType==='Item'?'#item-viewer-g':orderDetail.orderDetailType==='ItemPackage'?'#item-package-viewer-g':''">
+                           (click)="getItemPackageSelected(orderDetail.itemPackage)"
+                           [attr.data-bs-target]="'#item-package-viewer-g'">
                           {{orderDetail.orderDetailType==='Item'?orderDetail.item.name:orderDetail.orderDetailType==='ItemPackage'?orderDetail.itemPackage.name:''}}
                         </a>
                         <i *ngIf="orderDetail.status==='Pending'" class="fas fa-sync-alt"
