--- a/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
+++ b/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
@@ -128,5 +128,5 @@
 ></a>
 
 <app-shop-cart></app-shop-cart>
-<app-item-detail-view></app-item-detail-view>
+<!--<app-item-detail-view></app-item-detail-view>-->
 <app-item-package-detail-view></app-item-package-detail-view>
