--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -116,8 +116,8 @@
               <div class="position-relative" style="margin: 15px 15px 0px 15px">
                 <h3 class="h6 fs-base" style="margin-bottom: 0px">
                   <a class="nav-link" data-bs-toggle="offcanvas"
-                     (click)="getItemSelected(item)"
-                     data-bs-target="#item-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
+                     (click)="getItemPackageSelected(item)"
+                     data-bs-target="#item-package-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
                     {{item.name}}
                   </a>
                 </h3>
@@ -248,7 +248,7 @@
                           <!--<h3 class="h5 text-light mb-1">{{itemPackage.name}}</h3>-->
                           <h3 class="h6 fs-base" style="margin-bottom: 0px">
                             <a class="nav-link" data-bs-toggle="offcanvas"
-                               (click)="getPackageItemSelected(itemPackage)"
+                               (click)="getItemPackageSelected(itemPackage)"
                                data-bs-target="#item-package-viewer-g" style="font-weight: bold;padding: 0px">{{itemPackage.name}}</a>
                           </h3>
                           <div class="fs-sm opacity-70">
@@ -293,7 +293,7 @@
                     </div>
                     <div style="height: 350px; background-size: cover;">
                       <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-                        <mdb-carousel-item *ngFor="let image of itemPackage.itemPackageImgs">
+                        <mdb-carousel-item *ngFor="let image of itemPackage.itemPackageImages">
                           <span
                             style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.25);position: absolute"></span>
                           <img style="max-height:350px;height: 350px" class="d-block w-100"
