--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -5,7 +5,8 @@
       <div style="display: flex">
         <h2 class="h5 mb-0" style="margin-right: 15px">{{itemPackage.name}}</h2>
         <span *ngIf="itemPackage.itemPackageType==='Item'" class="badge rounded-pill bg-info" style="padding-top: 7px"> Item </span>
-        <span *ngIf="itemPackage.itemPackageType==='Package'" class="badge rounded-pill bg-success" style="padding-top: 7px"> Package </span>
+        <span *ngIf="itemPackage.itemPackageType==='Package'" class="badge rounded-pill bg-success"
+              style="padding-top: 7px"> Package </span>
       </div>
       <button class="btn-close" type="button" data-bs-dismiss="offcanvas"></button>
     </div>
@@ -81,7 +82,8 @@
                 <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                   {{itemPackage.makeToOrder?'Max':''}} Quantity
                 </p>
-                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{itemPackage.quantity}}</p>
+                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">
+                  {{itemPackage.quantity}}</p>
               </div>
               <div *ngIf="itemPackage.quantity===0" style="border-right: 1px solid #d3d3d3;margin-top: 22px">
                 <p class="mb-2 fs-sm fw-bold mx-2"
@@ -134,9 +136,9 @@
                   class="fi-star fs-sm"></i> 4.5 / 5</h4></span>
                 </div>
                 <!--<div class="content-overlay end-0 top-0 pt-3 pe-3">-->
-                  <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
-                          <!--data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>-->
-                  <!--</button>-->
+                <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
+                <!--data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>-->
+                <!--</button>-->
                 <!--</div>-->
 
                 <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
@@ -153,7 +155,7 @@
                 <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
                 <h3 class="h6 mb-2 fs-base">
                   <a class="nav-link"
-                     (click)="getItemPackageSelected(packageItemItem.item.itemPackage)"
+                     (click)="getItemPackageSelected(itemPackage,packageItemItem.item.itemPackage)"
                      style="font-weight: bold;padding: 0px">{{packageItemItem.item.itemPackage.name}}</a></h3>
                 <!-- <div class="d-flex align-items-center text-nowrap">
                   <p class="mb-2 fs-sm text-muted">Quantity </p>
@@ -163,34 +165,34 @@
 
                 </div>
                 <!--<div class="row cols-sm-2 row-cols-md-12"-->
-                     <!--style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">-->
-                  <!--<div class="col" style="padding: 0px">-->
-                    <!--<div style="border-right: 1px solid #d3d3d3">-->
-                      <!--<p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">-->
-                        <!--Quantity </p>-->
-                      <!--<p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">-->
-                        <!--{{packageItemItem.item.itemPackage.quantity}}</p>-->
-                    <!--</div>-->
-                  <!--</div>-->
-                  <!--<div class="col" style="padding: 0px">-->
-                    <!--<p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">-->
-                      <!--Discount </p>-->
-                    <!--<p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">-->
-                      <!--{{packageItemItem.item.itemPackage.discountType==='None' ? 'N/A' :-->
-                      <!--packageItemItem.item.itemPackage.discountType==='Cash' ? ('LKR '+packageItemItem.item.itemPackage.discount) :-->
-                      <!--packageItemItem.item.itemPackage.discountType==='Percentage' ? (packageItemItem.item.itemPackage.discount + '%') : ''}}-->
-                    <!--</p>-->
-                    <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='None'" class="mb-2 fs-sm text-primary fw-bold">N/A</p>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Cash'" class="mb-2 fs-sm text-primary fw-bold">{{"LKR " + item.itemDiscount}}</p>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Percentage'" class="mb-2 fs-sm text-primary fw-bold">{{item.itemDiscount + "%"}}</p>&ndash;&gt;-->
-                  <!--</div>-->
+                <!--style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">-->
+                <!--<div class="col" style="padding: 0px">-->
+                <!--<div style="border-right: 1px solid #d3d3d3">-->
+                <!--<p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">-->
+                <!--Quantity </p>-->
+                <!--<p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">-->
+                <!--{{packageItemItem.item.itemPackage.quantity}}</p>-->
+                <!--</div>-->
+                <!--</div>-->
+                <!--<div class="col" style="padding: 0px">-->
+                <!--<p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">-->
+                <!--Discount </p>-->
+                <!--<p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">-->
+                <!--{{packageItemItem.item.itemPackage.discountType==='None' ? 'N/A' :-->
+                <!--packageItemItem.item.itemPackage.discountType==='Cash' ? ('LKR '+packageItemItem.item.itemPackage.discount) :-->
+                <!--packageItemItem.item.itemPackage.discountType==='Percentage' ? (packageItemItem.item.itemPackage.discount + '%') : ''}}-->
+                <!--</p>-->
+                <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='None'" class="mb-2 fs-sm text-primary fw-bold">N/A</p>&ndash;&gt;-->
+                <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Cash'" class="mb-2 fs-sm text-primary fw-bold">{{"LKR " + item.itemDiscount}}</p>&ndash;&gt;-->
+                <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Percentage'" class="mb-2 fs-sm text-primary fw-bold">{{item.itemDiscount + "%"}}</p>&ndash;&gt;-->
+                <!--</div>-->
                 <!--</div>-->
                 <!--<div class="fw-bold">-->
-                  <!--<i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>-->
-                  <!--<span *ngIf="packageItemItem.item.itemPackage.discountType==='None'">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
-                  <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'"-->
-                        <!--style="text-decoration: line-through;color: red">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
-                  <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{packageItemItem.item.itemPackage.discountedPrice | number:'.2-2'}}</span>-->
+                <!--<i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>-->
+                <!--<span *ngIf="packageItemItem.item.itemPackage.discountType==='None'">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
+                <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'"-->
+                <!--style="text-decoration: line-through;color: red">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
+                <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{packageItemItem.item.itemPackage.discountedPrice | number:'.2-2'}}</span>-->
                 <!--</div>-->
               </div>
               <!--<div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">-->
@@ -338,8 +340,7 @@
       </li>
       <li class="nav-item me-2" *ngIf="itemPackageObj.backBtn!==undefined && !review">
         <a class="btn btn-md btn-outline-info" [attr.data-bs-target]="'#'+itemPackageObj.backBtn"
-           data-bs-toggle="offcanvas"
-           role="tab"><i
+           role="tab" (click)="goBack()"><i
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
       <li class="nav-item me-2" *ngIf="review">
