--- a/Frontend/src/app/view/item-detail-view/item-detail-view.component.html
+++ b/Frontend/src/app/view/item-detail-view/item-detail-view.component.html
@@ -155,7 +155,7 @@
           <!--&lt;!&ndash;add Review&ndash;&gt;-->
           <!--<div class="collapse mb-4 pb-4" id="add-review">-->
             <!--<div class="card card-body">-->
-              <!--<form #reviewForm="ngForm" (ngSubmit)="reviewForm.form.valid && addItemReview()" novalidate>-->
+              <!--<form #reviewForm="ngForm" (ngSubmit)="reviewForm.form.valid && addItemPackageReview()" novalidate>-->
                 <!--&lt;!&ndash;<form class="needs-validation" novalidate>&ndash;&gt;-->
                 <!--<div class="mb-3">-->
                   <!--<label class="form-label" for="i-review-rating">Rating <span class='text-danger'>*</span></label>-->
@@ -259,7 +259,7 @@
       <!--</li>-->
       <!--<li class="nav-item me-2">-->
         <!--<a class="btn btn-md btn-outline-primary" href="#item-review" data-bs-toggle="tab" role="tab"-->
-           <!--(click)="getItemReviews()"><i-->
+           <!--(click)="getItemPackageReviews()"><i-->
           <!--class="fi-star fs-lg me-2"></i>Reviews</a>-->
       <!--</li>-->
     <!--</ul>-->
