--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -123,7 +123,7 @@
           </div>
         </div>
 
-        <div class="row" style="margin-top: 10px">
+        <div *ngIf="itemPackage.itemPackageType==='Package'" class="row" style="margin-top: 10px">
           <p class="mb-2 fs-sm text-dark fw-bold">Includes </p>
           <!--Item-->
           <div class="col-sm-12 col-md-6 col-xl-6" *ngFor="let packageItemItem of itemPackage.packageItemItems">
