--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -120,7 +120,7 @@
                 <div class="row">
                   <div class="col-10">
                     <h3 class="h6 fs-base" style="margin-bottom: 0px">
-                      <a class="nav-link" data-bs-toggle="offcanvas"
+                      <a class="nav-link item-package-viewer-g-btn" data-bs-toggle="offcanvas"
                          (click)="getItemPackageSelected(item)"
                          data-bs-target="#item-package-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
                         {{item.name}}
@@ -272,7 +272,7 @@
                 <div class="row">
                   <div class="col-10">
                     <h3 class="h6 fs-base" style="margin-bottom: 0px">
-                      <a class="nav-link" data-bs-toggle="offcanvas"
+                      <a class="nav-link item-package-viewer-g-btn" data-bs-toggle="offcanvas"
                          (click)="getItemPackageSelected(item)"
                          data-bs-target="#item-package-viewer-g" style="font-weight: bold;padding: 0px;cursor: pointer">
                         {{item.name}}
