--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -119,3 +119,4 @@
 <app-shop-cart></app-shop-cart>
 <!--<app-item-detail-view></app-item-detail-view>-->
 <app-item-package-detail-view></app-item-package-detail-view>
+<!--<app-shop-view></app-shop-view>-->
