--- a/Frontend/src/app/view/shop-view/shop-view.component.html
+++ b/Frontend/src/app/view/shop-view/shop-view.component.html
@@ -65,11 +65,11 @@
                   <div class="col" *ngFor="let category of businessProfile.businessProfileCategories"
                   (click)="getItemsBusinessProfile(category.businessCategory.businessCategoryId)">
                     <a class="icon-box card card-body h-100 border-0 shadow-sm card-hover text-center">
-                    <div class="icon-box-media bg-faded-accent text-accent rounded-circle mb-3 mx-auto"><i
-                      [ngStyle]="{'color':businessProfile.defaultBusiness.name===category.name?'orangered':''}"
+                    <div class="icon-box-media bg-faded-accent rounded-circle mb-3 mx-auto"><i
+                      [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}"
                       class="fi-bed"></i></div>
                     <h3 class=" fs-base mb-0"
-                        [ngStyle]="{'color':businessProfile.defaultBusiness.name===category.name?'orangered':''}">
+                        [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}">
                       {{category.name}}
                     </h3>
                   </a></div>
